--- a/resources/views/home.html
+++ b/resources/views/home.html
@@ -1,7 +1,9 @@
-@extends('layouts.app')
 
-@section('content')
-<head>
+<!DOCTYPE html>
+
+<html lang="en">
+
+  <head>
     <style type ="text/css">
 
       #container {
@@ -171,4 +173,4 @@
 
   
   </body>
-@endsection
+</html>
