--- a/resources/views/ParticipaConNosotros.html
+++ b/resources/views/ParticipaConNosotros.html
@@ -124,20 +124,12 @@
     </div>
     
 
-    <h2 style="color:black;">¿Qué hace un voluntariado en Ohana?</h2>
-    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut
-     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-     laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non 
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <h2 style="color:black;">Voluntario Permanente</h2>
+    <p> En Ohana estamos buscando voluntarios comprometidos con crear un cambio, envíanos tus datos y buscaremos la mejor sede para ti.
     </p>
 
-    <h3 style="color:white;">¿Cómo participar en Ohana?</h3>
-    <p > Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut
-     labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-     laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate
-      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non 
-      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    <h3 style="color:white;">Actividad única</h3>
+    <p > ¿Tienes una idea que te gustaría desarrollar pero no sabes por dónde empezar? Envíanos tus datos y juntos crearemos un proyecto único
     </p>
 
 
